Fixing Width and Contrast

--- a/courses/static/courses/css/courses.css
+++ b/courses/static/courses/css/courses.css
@@ -5,18 +5,23 @@
 #id_content, #id_featured_image{
     width: 80%;
 }
-
+a, a:hover{
+    color: rgb(38, 0, 255);
+}
 .master_head {
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
     background-image: url("https://img.freepik.com/free-photo/tropical-swiss-cheese-plant-banner_53876-129938.jpg?w=996&t=st=1677253455~exp=1677254055~hmac=7cddd06ae640000271bb2af1fe509bc96107f077ab6a6e015dbf6e74db5d2881");
     color: white;
-    width: 100%;
-    height: 300px;
-    position: absolute;
+    width: 250;
+    height: 150px;
+    position: static;
 }
 
-.masthead-image{
-    height: 100px;
-    width: 100%;
+.masthead_image{
+    height: 300px;
+    width: 300px;
 }
 
 
